# pumping-test

./: .gitignore  Dockerfile  README.md  _df.csv  app.py  app_brainstorms.md  cli.py  config.yaml  constant_test.csv  docker-compose.yaml  functions.py  main.py  models.py  notes.txt  pyproject.toml  recovery_test.csv  recovery_test_bh26.csv  requirements.txt  step_test.csv  step_test_2.csv  step_test_2_rates.csv  step_test_rates.csv
analysis/: constant_rate.py  interpretation.py  recovery.py  step_drawdown.py
app/: layout.py  main.py  requirements.txt  runner.py  server.py
config/: loader.py  schema.py  validator.py
data/: constant_rate.csv  recovery.csv  step_drawdown.csv
in_out/: csv_reader.py  report.py
plotting/: common.py  constant_rate.py  recovery.py  step_drawdown.py  utils.py
pumpingtest/: pyvenv.cfg
rsconnect-python/: PumpingTest_App.json
templates/: config_template.json  config_template.yaml
